# software-security-assignments

./: README.md
assignment_1/: .gitignore  CMakeLists.txt  zadanie1  zadanie1.c
assignment_2/: Makefile  dockerfile  hash_passwords  hash_passwords.c  hesla.csv  info.txt  zadanie2  zadanie2.c
